created a profile using css

--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>All about me</title>
+    <title>Gowthami Guthula - Aspiring Web Developer"</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
             <td>4months</td>
         </tr>
         <tr>
-            <td>HTML</td>
+            <td>HTML</td>P
             <td>lerning</td>
             <td>2 weeks</td>
         </tr>
